feat: add ai panel tab to logs footer

--- a/n8n/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/n8n/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -1150,6 +1150,16 @@
 	"logs.details.body.itemCount": "{count} item | {count} items",
 	"logs.details.body.multipleInputs": "Multiple inputs. View them by {button}",
 	"logs.details.body.multipleInputs.openingTheNode": "opening the node",
+	"logs.footer.tabs.logs": "Logs",
+	"logs.footer.tabs.ai": "AI builder",
+	"logs.aiPanel.title": "AI workflow builder",
+	"logs.aiPanel.subtitle": "Describe the automation you need and let the assistant draft the nodes for you.",
+	"logs.aiPanel.promptLabel": "Prompt",
+	"logs.aiPanel.promptPlaceholder": "Example: Monitor Gmail for invoices, extract the total, then send me a Slack summary every Friday.",
+	"logs.aiPanel.generateButton": "Generate suggestion",
+	"logs.aiPanel.insertButton": "Insert into canvas",
+	"logs.aiPanel.infoCallout": "We’re wiring this experience directly into the workflow canvas. The assistant will soon be able to insert nodes, apply templates, and cite the source automations it used.",
+	"logs.aiPanel.historyTitle": "Recent ideas",
 	"mainSidebar.aboutN8n": "About n8n",
 	"mainSidebar.confirmMessage.workflowArchive.cancelButtonText": "",
 	"mainSidebar.confirmMessage.workflowArchive.confirmButtonText": "Yes, archive",
