feat: wire ai panel to gemini endpoint

--- a/n8n/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/n8n/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -1159,7 +1159,10 @@
 	"logs.aiPanel.generateButton": "Generate suggestion",
 	"logs.aiPanel.insertButton": "Insert into canvas",
 	"logs.aiPanel.infoCallout": "We’re wiring this experience directly into the workflow canvas. The assistant will soon be able to insert nodes, apply templates, and cite the source automations it used.",
-	"logs.aiPanel.historyTitle": "Recent ideas",
+	"logs.aiPanel.historyTitle": "Recent prompts",
+	"logs.aiPanel.latestSuggestion": "Latest suggestion",
+	"logs.aiPanel.defaultSummary": "AI-generated workflow",
+	"logs.aiPanel.error.generic": "Unable to reach the AI workflow service. Check the endpoint and try again.",
 	"mainSidebar.aboutN8n": "About n8n",
 	"mainSidebar.confirmMessage.workflowArchive.cancelButtonText": "",
 	"mainSidebar.confirmMessage.workflowArchive.confirmButtonText": "Yes, archive",
