--- a/n8n/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/n8n/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -1163,6 +1163,8 @@
 	"logs.aiPanel.latestSuggestion": "Latest suggestion",
 	"logs.aiPanel.defaultSummary": "AI-generated workflow",
 	"logs.aiPanel.error.generic": "Unable to reach the AI workflow service. Check the endpoint and try again.",
+	"logs.aiPanel.error.invalidWorkflow": "The AI response did not contain a valid workflow.",
+	"logs.aiPanel.error.importFailed": "Unable to insert the generated workflow into the canvas.",
 	"mainSidebar.aboutN8n": "About n8n",
 	"mainSidebar.confirmMessage.workflowArchive.cancelButtonText": "",
 	"mainSidebar.confirmMessage.workflowArchive.confirmButtonText": "Yes, archive",
