Fix AI panel load errors and workflow replace

--- a/n8n/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/n8n/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -1165,6 +1165,10 @@
 	"logs.aiPanel.error.generic": "Unable to reach the AI workflow service. Check the endpoint and try again.",
 	"logs.aiPanel.error.invalidWorkflow": "The AI response did not contain a valid workflow.",
 	"logs.aiPanel.error.importFailed": "Unable to insert the generated workflow into the canvas.",
+	"logs.aiPanel.toast.title": "Workflow inserted",
+	"logs.aiPanel.toast.message": "Added {count} AI-generated nodes to the canvas.",
+	"logs.aiPanel.copyJsonSuccess": "Workflow JSON copied to clipboard.",
+	"logs.aiPanel.copyJsonError": "Unable to copy the workflow JSON.",
 	"mainSidebar.aboutN8n": "About n8n",
 	"mainSidebar.confirmMessage.workflowArchive.cancelButtonText": "",
 	"mainSidebar.confirmMessage.workflowArchive.confirmButtonText": "Yes, archive",
